--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "blog-template"
-title: "Héloïse's Blog"
+title: "Humans and Technology, Is It a Good or a Bad Thing ? "
 output_dir: "docs"
 navbar:
   right:
