--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,7 @@ navbar:
 base_url: Heloise04.github.io/Heloise_blog/
 collections:
     posts:
+      disqus: heloises-blog-3
       share: [twitter, linkedin, facebook]
       #disqus: 
 output:
