essai mise en page

--- a/_site.yml
+++ b/_site.yml
@@ -9,6 +9,10 @@ navbar:
       href: "posts/meal/index.html"
     - text: "About Me"
       href: "posts/about/index.html"
+    - text: "Introduction"
+      href: "posts/2020-11-27-introduction/index.html"
+    - text: "Conclusion"
+      href: "posts/2020-12-08-conclusion/index.html"
     - icon: fab fa-github
       href: https://github.com/Heloise04/Heloise_blog
 base_url: http://Heloise04.github.io/Heloise_blog/
